 Open Freelance Accounting - NEWS

 Summary
 =======
 
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.41
 ============

 Released on 

 New features and improvements:

   - Reconciliation: disable buttons when actions are done (todo #883).

 Bug fixes:

   - Reconciliation: fix missing leading space (todo #881).
   - Reconciliation: fix rounding computation (todo #876).
   - Reconciliation: fix account label style (todo #871).

 Other changes:

   - ofo_currency_get_min_gap(): new method.
   - ofaPage: is now derived from GtkGrid.
   - ofa_page_get_top_grid(): removed method.

-----------------------------------------------------------------------
 Version 0.40
 ============

 Released on 2015-11-05

 New features and improvements:

   - Display application version (todo #6).
   - AccountsChart: open Settlement and Reconciliation page (todo #813).
   - DossierManager: rows are sorted by ascending dossier name, descending exercice (todo #831).
   - ImportAssistant: recall the loaded file on top of the pages (todo #836).
   - Restore: close the current dossier if any (todo #807).
   - RestoreAssistant: remove a newly created dossier on cancel (todo #834).
   - RateProperties: let the user reorder the lines (todo #187).
   - Add user preferences to open dossier notes or properties at startup.
   - Set mnemonic widgets on all dialogs (todo #839).
   - Have a mnemonic widget even in frames with a single child (todo #857).
   - Defines the ofaIAbout interface for the plugins (todo #858).
   - Horizontally align action buttons to use less vertical space (todo #842).
   - Homogeneize visual width and alignment of date entries (todo #852).
   - Add a visual frame around accounts and operation templates treeviews.
   - Review the layout of DossierNewBin fields (todo #847).